Add supporting of constructors